# tarzan

./: .gitignore  .travis.meta.yml  .travis.yml  README.md  tarzan.cabal
src/: Tarzan.hs
src/Tarzan/: Parse.hs
tests/: Tests.hs
